--- a/Complex_sandpile.ipynb
+++ b/Complex_sandpile.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 145,
-   "id": "surprising-kernel",
+   "execution_count": 2,
+   "id": "recorded-ambassador",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
-   "id": "latest-flexibility",
+   "execution_count": 34,
+   "id": "public-mileage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,10 +25,14 @@
     "    # adding method; Where are the grains added using the add_sand function (position, random, normal)\n",
     "    \n",
     "    A = np.zeros((size,size))\n",
+    "    Rep_3D = np.zeros((size, size, 100))\n",
+    "    \n",
     "    for k in range(trails):\n",
     "        \n",
     "        # add sand to the model\n",
-    "        add_sand(A, adding_method)\n",
+    "        pos = add_sand(A, adding_method)\n",
+    "        Sand_type = np.random.randint(1,3)\n",
+    "        Rep_3D[pos[0]][pos[1]][A[pos[0]][pos[1]] - 1] = Sand_type\n",
     "        \n",
     "        # update the model simetaniously\n",
     "        B = copy.deepcopy(A)\n",
@@ -52,13 +56,13 @@
     "                        if neigbours(A, [i,j])[1][itter] == 1:\n",
     "                            A[i][j + adj] += 1\n",
     "                        itter += 1\n",
-    "    return A"
+    "    return A, Rep_3D"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "short-compression",
+   "id": "coastal-powder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "painted-accessory",
+   "id": "specialized-roommate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,8 +106,10 @@
     "    # standard postion is center and standard deviation is 1/6 th of the matrix size (3 SD intervall covers 99.9% of the matrix)\n",
     "    \n",
     "    if method.lower() == \"random\":\n",
-    "        Matrix[np.random.randint(len(Matrix) - 1)][np.random.randint(len(Matrix[0]) - 1)] += 1\n",
-    "        return\n",
+    "        randcords = [np.random.randint(len(Matrix) - 1), np.random.randint(len(Matrix[0]) - 1)]\n",
+    "        \n",
+    "        \n",
+    "        return randcords\n",
     "    \n",
     "    # set values of cordinates if no values are given\n",
     "    if cords[0] == -1:\n",
@@ -115,23 +121,17 @@
     "        print(\"this\")\n",
     "\n",
     "        Matrix[cords[0]][cords[1]] += 1\n",
-    "        return\n",
+    "        return cords\n",
     "    \n",
     "    if method.lower() == \"normal\":\n",
     "        # set value of standard deviation\n",
     "        if std == -1:\n",
     "            std = math.ceil(len(Matrix)/6)\n",
-    "            \n",
-    "        Matrix[np.random.normal(cords[0], std)][np.random.normal(cords[1], std)] += 1"
+    "        \n",
+    "        randcords = [np.random.normal(cords[0], std), np.random.normal(cords[1], std)]\n",
+    "        Matrix[randcords[0]][randcords[1]] += 1\n",
+    "        return randcords"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "found-monkey",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
