--- a/Complex_sandpile.ipynb
+++ b/Complex_sandpile.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "nasty-cowboy",
+   "id": "manufactured-smile",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,38 +15,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "scientific-fraction",
+   "execution_count": 58,
+   "id": "rural-airport",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Sandpile_2D(size, crit_values, sand_types, trails, boundary_con = False, adding_method = \"position\"):\n",
+    "def Sandpile_2D(size, crit_values, sand_types, trails, boundary_con = False, adding_method = \"position\", seed = 0):\n",
     "    # basic sandpile model of given size (size by size matrix) with given critical value and trails\n",
     "    # boundary_con is True walled model (sand is not removed) if False sand is removed from the sides\n",
     "    # adding method; Where are the grains added using the add_sand function (position, random, normal)\n",
+    "    np.random.seed(seed)\n",
+    "    random.seed(seed)\n",
+    "    \n",
     "    data = np.zeros(trails)\n",
     "    Order = [-1, -2, -3, -4]\n",
     "    A = np.zeros((size,size))\n",
     "    Rep_3D = []\n",
     "    for i in range(size):\n",
-    "        A.append([])\n",
+    "        Rep_3D.append([])\n",
     "        for j in range(size):\n",
-    "             A[i].append([])\n",
+    "             Rep_3D[i].append([])\n",
     "    \n",
     "    for k in range(trails):\n",
     "        # add sand to the model\n",
     "        pos = add_sand(A, adding_method)\n",
     "        Sand_type = np.random.randint(1,1 + sand_types)\n",
-    "        Rep_3D[pos[0]][pos[1]].apppend(Sand_type)\n",
+    "        Rep_3D[pos[0]][pos[1]].append(Sand_type)\n",
     "        \n",
     "        # update the model simetaniously\n",
+    "        \n",
     "        B = copy.deepcopy(A)\n",
     "        avalage = 0\n",
-    "        control = -1\n",
+    "        control = 0\n",
     "        while True:\n",
-    "             for i in range(0, len(A)):\n",
+    "            for i in range(0, len(A)):\n",
     "                for j in range(0, len(A[0])):\n",
     "                    if  A[i][j] - min(neigbours(B, [i,j])[0]) >= crit_values[Sand_type - 1] and B[i][j] >= 4:\n",
+    "                        \n",
     "                        avalage += 1\n",
     "                        # add to surrounding area\n",
     "                        random.shuffle(Order)\n",
@@ -66,25 +71,25 @@
     "                        if boundary_con == True:\n",
     "                            A[i][j] -= sum(neigbours(A, [i,j])[1])\n",
     "                            for k in range(sum(neigbours(A, [i,j])[1])):\n",
-    "                                A[i][j].pop()\n",
+    "                                Rep_3D[i][j].pop()\n",
     "                        else:\n",
     "                            A[i][j] -= 4\n",
     "                            for k in range(4):\n",
-    "                                A[i][j].pop()\n",
-    "                \n",
-    "                if control == avalage:\n",
-    "                    data[trail] == avalage\n",
-    "                    break\n",
+    "                                Rep_3D[i][j].pop()\n",
+    "            \n",
+    "            if control == avalage:\n",
+    "                data[k] == avalage\n",
+    "                break\n",
     "                    \n",
-    "                control = avalage\n",
+    "            control = avalage\n",
     "                    \n",
     "    return A, Rep_3D, data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
-   "id": "informative-semiconductor",
+   "execution_count": 36,
+   "id": "conventional-promotion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,8 +120,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
-   "id": "controversial-student",
+   "execution_count": null,
+   "id": "lightweight-passing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,8 +143,6 @@
     "        cords[1] = math.floor(len(Matrix)/2)\n",
     "    \n",
     "    if method.lower() == \"position\":\n",
-    "        print(\"this\")\n",
-    "\n",
     "        Matrix[cords[0]][cords[1]] += 1\n",
     "        return cords\n",
     "    \n",
@@ -155,58 +158,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "iraqi-delta",
+   "execution_count": 31,
+   "id": "dental-separate",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[[], [], [], [], []],\n",
-       " [[], [], [], [], []],\n",
-       " [[], [], [], [], []],\n",
-       " [[], [], [], [], []],\n",
-       " [[], [], [], [], []]]"
+       "[-4, -3, -1, -2]"
       ]
      },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "size = 5\n",
-    "A = []\n",
-    "for i in range(size):\n",
-    "    A.append([])\n",
-    "    for j in range(size):\n",
-    "         A[i].append([])\n",
-    "A"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "adjusted-bernard",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A[1][1].append(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "revised-tutorial",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[-2, -1, -4, -3]"
-      ]
-     },
-     "execution_count": 23,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,8 +181,176 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "id": "absolute-bhutan",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n",
+      "this\n"
+     ]
+    }
+   ],
+   "source": [
+    "Matrix, C_Matrix, ava = Sandpile_2D(5, [4, 5], 2, 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "toxic-casino",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 4., 4., 4., 0.],\n",
+       "       [4., 4., 6., 4., 4.],\n",
+       "       [4., 6., 8., 6., 4.],\n",
+       "       [4., 4., 6., 4., 4.],\n",
+       "       [0., 4., 4., 4., 0.]])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "secure-immune",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ava"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "greek-factory",
+   "id": "divine-sheffield",
    "metadata": {},
    "outputs": [],
    "source": []
